// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserIcon displays active user image correctly 1`] = `
<FasterImageView
  accessibilityIgnoresInvertColors={true}
  accessibilityRole="image"
  source={
    {
      "borderRadius": 20,
      "resizeMode": "cover",
      "url": "some_uri",
    }
  }
  style={
    [
      [
        {
          "borderColor": "#74AC00",
          "borderRadius": 20,
          "borderWidth": 3,
        },
        {
          "height": 40,
          "overflow": "hidden",
          "width": 40,
        },
      ],
    ]
  }
  testID="UserIcon.photo"
/>
`;

exports[`UserIcon displays small user image correctly 1`] = `
<FasterImageView
  accessibilityIgnoresInvertColors={true}
  accessibilityRole="image"
  source={
    {
      "borderRadius": 11,
      "resizeMode": "cover",
      "url": "some_uri",
    }
  }
  style={
    [
      [
        undefined,
        {
          "height": 22,
          "overflow": "hidden",
          "width": 22,
        },
      ],
    ]
  }
  testID="UserIcon.photo"
/>
`;

exports[`UserIcon displays user image correctly 1`] = `
<FasterImageView
  accessibilityIgnoresInvertColors={true}
  accessibilityRole="image"
  source={
    {
      "borderRadius": 20,
      "resizeMode": "cover",
      "url": "some_uri",
    }
  }
  style={
    [
      [
        undefined,
        {
          "height": 40,
          "overflow": "hidden",
          "width": 40,
        },
      ],
    ]
  }
  testID="UserIcon.photo"
/>
`;
